--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -8,7 +8,7 @@
 {% block menu_top %}
     <li class="nav-item">
         <a href="{{ path('issep_home') }}" class="nav-link">
-            <i class="fas fa-plus"></i> Stations
+            <i class="fas fa-list"></i> Stations
         </a>
     </li>
 {% endblock %}
