--- a/templates/station/index.html.twig
+++ b/templates/station/index.html.twig
@@ -3,8 +3,8 @@
 
     <div class="card">
         <h3 class="card-header">Stations Issep</h3>
-
         <div class="card-body">
+            {% include '@AcMarcheIssep/_urlexecuted.html.twig' %}
             <table class="table table-bordered">
                 <thead>
                 <tr>
