--- a/templates/station/config.html.twig
+++ b/templates/station/config.html.twig
@@ -3,6 +3,7 @@
     <div class="card">
         <h3 class="card-header">Configuration de {{ station.nom }}</h3>
         <div class="card-body">
+            {% include '@AcMarcheIssep/_urlexecuted.html.twig' %}
             <table class="table table-bordered">
                 <tr>
                     <th>
