--- a/templates/station/_feu.html.twig
+++ b/templates/station/_feu.html.twig
@@ -2,7 +2,7 @@
     <div class="protector"></div>
     <div class="protector"></div>
     <div class="protector"></div>
-    <div class="red"></div>
-    <div class="yellow"></div>
-    <div class="green"></div>
+    <div class="{{ colors.red }}"></div>
+    <div class="{{ colors.yellow}}"></div>
+    <div class="{{ colors.green }}"></div>
 </div>
