--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -11,4 +11,9 @@
             <i class="fas fa-list"></i> Stations
         </a>
     </li>
+    <li class="nav-item">
+        <a href="{{ path('issep_map') }}" class="nav-link">
+            <i class="fas fa-map"></i> Carte
+        </a>
+    </li>
 {% endblock %}
