--- a/templates/station/indice.html.twig
+++ b/templates/station/indice.html.twig
@@ -55,7 +55,7 @@
             {% else %}
                 <p>Aucun indice</p>
             {% endif %}
-
+<h4 class="text-success" id="historique">Historiques</h4>
             {% include '@AcMarcheIssep/station/_historique.html.twig' %}
         </div>
     </div>
