--- a/templates/station/map.html.twig
+++ b/templates/station/map.html.twig
@@ -29,6 +29,15 @@
 {% endblock %}
 {% block scripts %}
     <script>
+        const iconUrl = 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/';
+        const iconOptions = {
+            shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+            iconSize: [25, 41],
+            iconAnchor: [12, 41],
+            popupAnchor: [1, -34],
+            shadowSize: [41, 41]
+        };
+
         const map = L.map('map').setView([50.2274, 5.3400], 15);
         L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
@@ -41,9 +50,17 @@
         }
 
         function addMarker(station) {
+            let options = {};
+            if (station.color) {
+                const colorIcon = 'marker-icon-2x-' + station.color + '.png';
+                iconOptions.iconUrl = iconUrl + colorIcon
+                const icon = new L.Icon(iconOptions);
+                options = {icon: icon};
+            }
             let url = '/issep/h24/' + station.id;
             let color = '<span class="myCircle" style="background-color:' + station.color + ';"></span>';
-            L.marker([station.lat, station.lon]).addTo(map)
+
+            L.marker([station.lat, station.lon], options).addTo(map)
                 .bindPopup('<a href="' + url + '">' + station.nom + ' <br/>' + color + '</a>');
         }
     </script>
