--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -16,4 +16,9 @@
             <i class="fas fa-map"></i> Carte
         </a>
     </li>
+    <li class="nav-item">
+        <a href="{{ path('issep_legend') }}" class="nav-link">
+            <i class="fas fa-info"></i> Légende
+        </a>
+    </li>
 {% endblock %}
