--- a/templates/station/_legend.html.twig
+++ b/templates/station/_legend.html.twig
@@ -1,13 +1,3 @@
-{% block stylesheets %}
-    <style>
-        .myCircle {
-            height: 25px;
-            width: 25px;
-            border-radius: 50%;
-            display: inline-block;
-        }
-    </style>
-{% endblock %}
 <table class="table table-bordered">
     <thead>
     <tr>
@@ -23,7 +13,7 @@
             <td>{{ indice.name }}</td>
             <td>{{ indice.value }}</td>
             <td>
-                <span class="myCircle" style="background-color: {{ indice.color }};"></span>
+                {% include '@AcMarcheIssep/station/_color.html.twig' %}
             </td>
         </tr>
     {% endfor %}
