--- a/templates/station/index.html.twig
+++ b/templates/station/index.html.twig
@@ -1,14 +1,4 @@
 {% extends '@AcMarcheIssep/layout.html.twig' %}
-{% block stylesheets %}
-    <style>
-        .myCircle {
-            height: 25px;
-            width: 25px;
-            border-radius: 50%;
-            display: inline-block;
-        }
-    </style>
-{% endblock %}
 {% block body %}
 
     <div class="card">
@@ -44,7 +34,7 @@
                                 <a href="{{ path('issep_indice', {'id': station.id}) }}">
                                     {{ station.indice.label }}
                                 </a>
-                                <span class="myCircle" style="background-color: {{ station.indice.color }};"></span>
+                                {% include '@AcMarcheIssep/station/_color.html.twig' with {'indice': station.indice} %}
                             {% endif %}
                         </td>
                         <td>
