replace number by id

--- a/templates/station/_station.html.twig
+++ b/templates/station/_station.html.twig
@@ -1,10 +1,10 @@
 <table class="table table-bordered">
     <tr>
         <th>
-            number<br>
+            id<br>
             <span class="text-muted">Numéro</span>
         </th>
-        <td>{{ station.number }} </td>
+        <td>{{ station.id }} </td>
     </tr>
     <tr>
         <th>
