--- a/templates/station/index.html.twig
+++ b/templates/station/index.html.twig
@@ -20,7 +20,7 @@
                 {% for station in stations %}
                     <tr>
                         <td>
-                            {{ station.number }}
+                            {{ station.id }}
                         </td>
                         <td>
                             {{ station.nom }}
