--- a/templates/station/_historique.html.twig
+++ b/templates/station/_historique.html.twig
@@ -2,7 +2,7 @@
     <thead>
     <tr>
         <th>Date</th>
-        <th>aqi_value</th>
+        <th>BelAQI</th>
         <th>Couleur</th>
     </tr>
     </thead>
