--- a/templates/station/indice.html.twig
+++ b/templates/station/indice.html.twig
@@ -11,9 +11,9 @@
             {% include '@AcMarcheIssep/_urlexecuted.html.twig' %}
 
             <div class="alert alert-info" style="position: relative; z-index: 1">
-                <a href="https://airindex.eea.europa.eu/Map/AQI/Viewer/" target="_blank">Cet indice varie de 1 à 6</a>
+                <a href="https://www.irceline.be/fr/qualite-de-lair/mesures/belaqi-indice-de-la-qualite-de-lair/information" target="_blank">Cet indice varie de 1 à 10</a>
                 <br>
-                Cliquez sur <a href="https://airindex.eea.europa.eu/Map/AQI/Viewer/">"About the European Air Quality
+                Cliquez sur <a href="https://airindex.eea.europa.eu/AQI/index.html">"About the European Air Quality
                     Index" pour plus d'informations sur cet indice</a><br>
             </div>
 
@@ -30,7 +30,7 @@
                                 <td>{{ lastIndice.ts }}</td>
                             </tr>
                             <tr>
-                                <th>aqi_value</th>
+                                <th>BelAQI</th>
                                 <td>{{ lastIndice.aqi_value }}</td>
                             </tr>
                             <tr>
