--- a/templates/station/_historique.html.twig
+++ b/templates/station/_historique.html.twig
@@ -1,18 +1,22 @@
-<table class="table table-bordered">
-    <thead>
-    <tr>
-        <th>Date</th>
-        <th>BelAQI</th>
-        <th>Couleur</th>
-    </tr>
-    </thead>
-    {% for indiceH in indices %}
+{% if indices|length > 0 %}
+    <table class="table table-bordered">
+        <thead>
         <tr>
-            <td>{{ indiceH.ts }}</td>
-            <td>{{ indiceH.aqi_value }}</td>
-            <td>
-                {% include '@AcMarcheIssep/station/_color.html.twig' with {'indice': indiceH.indice}  %}
-            </td>
+            <th>Date</th>
+            <th>BelAQI</th>
+            <th>Couleur</th>
         </tr>
-    {% endfor %}
-</table>
+        </thead>
+        {% for indiceH in indices %}
+            <tr>
+                <td>{{ indiceH.ts|format_date('full') }}</td>
+                <td>{{ indiceH.aqi_value }}</td>
+                <td>
+                    {% include '@AcMarcheIssep/station/_color.html.twig' with {'indice': indiceH} %}
+                </td>
+            </tr>
+        {% endfor %}
+    </table>
+{% else %}
+    <p class="text-warning">Aucun indice trouvé {% if date is defined %} à la date {{ date|date('d-m-Y')}} {% endif %}</p>
+{% endif %}
