--- a/templates/station/index.html.twig
+++ b/templates/station/index.html.twig
@@ -12,7 +12,7 @@
                     <th>Nom</th>
                     <th>Aujourd'hui</th>
                     <th>Indice</th>
-                    <th>Configuration</th>
+                    <th>Dernier relevé</th>
                     <th>Données</th>
                 </tr>
                 </thead>
@@ -31,7 +31,7 @@
                         </td>
                         <td class="d-flex flex-column align-items-center">
                             {% if station.last_indice %}
-                                <div  class="d-flex justify-content-between">
+                                <div class="d-flex justify-content-between">
                                     <a href="{{ path('issep_indice', {'id': station.id}) }}">
                                         {{ station.last_indice.label }}
                                     </a>
@@ -43,7 +43,9 @@
                             {% endif %}
                         </td>
                         <td>
-                            <a href="{{ path('issep_config', {'id': station.id}) }}">Config</a>
+                            {% if station.last_indice %}
+                                {{ station.last_indice.ts|format_date('full') }}
+                            {% endif %}
                         </td>
                         <td>
                             <a href="{{ path('issep_data', {'id': station.id}) }}">Relevés</a>
