add last indices

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -28,6 +28,11 @@
         </a>
     </li>
     <li class="nav-item">
+        <a href="{{ path('issep_indice_last') }}" class="nav-link">
+            <i class="fas fa-list"></i> Derniers indices
+        </a>
+    </li>
+    <li class="nav-item">
         <a href="{{ path('issep_legend') }}" class="nav-link">
             <i class="fas fa-info"></i> Légende
         </a>
